--- a/dl.cfg
+++ b/dl.cfg
@@ -1,3 +1,3 @@
 [AWS]
-AWS_ACCESS_KEY_ID= not supposed to share
-AWS_SECRET_ACCESS_KEY= not supposed to share
+AWS_ACCESS_KEY_ID= XXX
+AWS_SECRET_ACCESS_KEY= YYY
